savefig and comments

--- a/1.1 Deep vs Shallow/1.1 Train Actual Task/MNIST_train_CNN.ipynb
+++ b/1.1 Deep vs Shallow/1.1 Train Actual Task/MNIST_train_CNN.ipynb
@@ -2665,12 +2665,14 @@
         "plt.plot(np.arange(0, len(CNN_1_loss), 1), CNN_1_loss, label = \"CNN_1 Loss\", color = \"blue\")\n",
         "plt.plot(np.arange(0, len(CNN_1_loss), 1), CNN_2_loss, label = \"CNN_2 Loss\", color = \"orange\")\n",
         "plt.legend()\n",
+        "plt.savefig(\"act_task_loss.png\")\n",
         "plt.show()\n",
         "\n",
         "# Accuracy Plot\n",
         "plt.plot(np.arange(0, len(CNN_1_accuracy), 1), np.array(CNN_1_accuracy), label = \"CNN_1 Accuracy\", color = \"blue\")\n",
         "plt.plot(np.arange(0, len(CNN_1_accuracy), 1), np.array(CNN_2_accuracy), label = \"CNN_2 Accuracy\", color = \"orange\")\n",
         "plt.legend()\n",
+        "plt.savefig(\"act_task_accuracy.png\")\n",
         "plt.show()"
       ]
     }
