--- a/1.2 Optimization/optimization_visualization.ipynb
+++ b/1.2 Optimization/optimization_visualization.ipynb
@@ -175,6 +175,7 @@
     "yvec = fn(xvec)\n",
     "plt.plot(xvec,yvec, label = \"function\")\n",
     "plt.title(\"Defined Function $f(x)=\\sin(5\\pi x)/5\\pi x$\")\n",
+    "plt.savefig(\"grad_fn_2_sim.png\")\n",
     "plt.show()"
    ]
   },
@@ -1696,9 +1697,11 @@
    "source": [
     "plt.plot(np.arange(0, len(model1_loss)), model1_loss)\n",
     "plt.title(\"Loss Simulate Fn\")\n",
+    "plt.savefig(\"grad_norm_loss_fn.png\")\n",
     "plt.show()\n",
     "plt.plot(np.arange(0, len(model1_grad)), model1_grad)\n",
     "plt.title(\"Gradient Simulate Fn\")\n",
+    "plt.savefig(\"grad_norm_fn.png\")\n",
     "plt.show()"
    ]
   }
@@ -1719,7 +1722,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
