--- a/1.3 Generalization/flat_v_gen_p1.ipynb
+++ b/1.3 Generalization/flat_v_gen_p1.ipynb
@@ -339,6 +339,7 @@
     "plt.plot(alpha.detach().numpy(), train_acc_vec, label = \"train accuracy\", color = \"orange\")\n",
     "plt.plot(alpha.detach().numpy(), test_acc_vec, label = \"test accuracy\", color = \"orange\", linestyle = \"dashed\")\n",
     "plt.legend()\n",
+    "plt.savefig(\"flat_v_gen_p1.png\")\n",
     "plt.show()"
    ]
   },
