--- a/1.3 Generalization/flat_v_gen_p2.ipynb
+++ b/1.3 Generalization/flat_v_gen_p2.ipynb
@@ -360,6 +360,7 @@
     "plt.legend()\n",
     "plt.twinx()\n",
     "plt.plot(batch_size, models_sens, label = \"sensitivity\", color = \"red\")\n",
+    "plt.savefig(\"sens_loss.png\")\n",
     "plt.show()\n",
     "\n",
     "plt.plot(batch_size, models_train_acc, label = \"train accuracy\", color = \"blue\")\n",
@@ -367,6 +368,7 @@
     "plt.legend()\n",
     "plt.twinx()\n",
     "plt.plot(batch_size, models_sens, label = \"sensitivity\", color = \"red\")\n",
+    "plt.savefig(\"sens_acc.png\")\n",
     "plt.show()"
    ]
   },
