--- a/1.3 Generalization/parameters_gener.ipynb
+++ b/1.3 Generalization/parameters_gener.ipynb
@@ -494,6 +494,7 @@
     "plt.scatter(parameters, train_acc_vec,  c = \"blue\", label = \"train accuracy\")\n",
     "plt.scatter(parameters, test_acc_vec, c = \"orange\", label = \"test accuracy\")\n",
     "plt.legend()\n",
+    "plt.savefig(\"param_acc.png\")\n",
     "plt.show()"
    ]
   },
@@ -585,6 +586,7 @@
     "plt.scatter(parameters, train_loss_vec,  c = \"blue\", label = \"train loss\")\n",
     "plt.scatter(parameters, test_loss_vec, c = \"orange\", label = \"test loss\")\n",
     "plt.legend()\n",
+    "plt.savefig(\"param_loss.png\")\n",
     "plt.show()"
    ]
   }
