--- a/1.3 Generalization/random_labels.ipynb
+++ b/1.3 Generalization/random_labels.ipynb
@@ -348,6 +348,7 @@
     "plt.plot(np.arange(0, len(CNN_1_loss_train), 1), CNN_1_loss_train, label = \"Train Loss\", color = \"blue\")\n",
     "plt.plot(np.arange(0, len(CNN_1_loss_test), 1), np.array(CNN_1_loss_test), label = \"Test Loss\", color = \"orange\")\n",
     "plt.legend()\n",
+    "plt.savefig(\"rand_lbl.png\")\n",
     "plt.show()"
    ]
   }
@@ -368,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
