--- a/Homework 1 report.ipynb
+++ b/Homework 1 report.ipynb
@@ -30,12 +30,12 @@
     "All models used had an input and output dimension of 1. The models I used are as follows:\n",
     "\n",
     "* Model 1: DNN with 2 hidden layers of sizes 75 and 25. Total of 2076 parameters\n",
-    "* Model 2: DNN with 5 hidden layers of sizes 17 &  26 &  25 &  23 &  and 12. Total of 2076 parameters\n",
+    "* Model 2: DNN with 5 hidden layers of sizes 17, 26, 25, 23 and 12. Total of 2076 parameters\n",
     "* Model 3: DNN with 1 hidden layer of size 692. Total of 2077 parameters\n",
     "\n",
     "All models were trained for 100 epochs and I fine tuned for batch size and learning rate on all models. \n",
     "\n",
-    "For function 1 &  we are simulating the function & \n",
+    "For function 1, we are simulating the function, \n",
     "\n",
     "$$\n",
     "f(x) = 5\\sin^2(\\frac{x}{2})\n",
@@ -43,9 +43,9 @@
     "\n",
     "The optimal hyperparameters were:\n",
     "\n",
-    "* Model 1: batch_size = 8 &  learning_rate = 0.001\n",
-    "* Model 2: batch_size = 16 &  learning_rate = 0.001\n",
-    "* Model 1: batch_size = 8 &  learning_rate = 0.001"
+    "* Model 1: bactch_size = 32, learning_rate = 0.01\n",
+    "* Model 2: bactch_size = 16, learning_rate = 0.0001\n",
+    "* Model 3: bactch_size = 8, learning_rate = 0.001"
    ]
   },
   {
@@ -54,31 +54,43 @@
    "source": [
     "The loss for all models are shown in the plot below:\n",
     "\n",
-    "! fn1loss (./1.1%20Deep%20vs%20Shallow/1.1%20Simulate%20Function/fn1_loss_output.png)\n",
+    "![fn1loss](./1.1%20Deep%20vs%20Shallow/1.1%20Simulate%20Function/fn1_loss_output.png)\n",
     "\n",
     "The predicted function curve of all the models is shown in the plot below along with the ground-truth curve:\n",
     "\n",
-    "! fn1pred (./1.1%20Deep%20vs%20Shallow/1.1%20Simulate%20Function/fn1_pred_output.png)"
+    "![fn1pred](./1.1%20Deep%20vs%20Shallow/1.1%20Simulate%20Function/fn1_pred_output.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For function 2 &  we simulated the function & \n",
+    "For function 2, we simulated the function,\n",
     "\n",
     "$$\n",
     "f(x) = \\frac{x^3e^{(x/10)}}{15}\n",
     "$$\n",
     "\n",
-    "The optimal hyperparameters were..."
+    "The optimal hyperparameters were:\n",
+    "\n",
+    "* Model 1: bactch_size = 16, learning_rate = 0.001\n",
+    "* Model 2: bactch_size = 8, learning_rate = 0.001\n",
+    "* Model 3: bactch_size = 8, learning_rate = 0.001\n",
+    "\n",
+    "The loss for all models are shown in the plot below:\n",
+    "\n",
+    "![fn2loss](./1.1%20Deep%20vs%20Shallow/1.1%20Simulate%20Function/fn2_loss_output.png)\n",
+    "\n",
+    "The predicted function curve of all the models is shown in the plot below along with the ground-truth curve:\n",
+    "\n",
+    "![fn2pred](./1.1%20Deep%20vs%20Shallow/1.1%20Simulate%20Function/fn2_pred_output.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It appears that all models seemed to approximate the function fairly well. However &  Model 3 slightly misses the curve at the endpoints. Model 3 is the shallowest of all the models &  so it is intuitive that it could have more error than the other models."
+    "It appears that all models seemed to approximate the function fairly well. However, Model 3 slightly misses the curve at the endpoints of function 1. Model 3 is the shallowest of all the models, so it is intuitive that it could have more error than the other models."
    ]
   },
   {
@@ -92,19 +104,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For traininig on an acutal task &  I chose to train on the MNIST dataset. The model architecture was similar for both models. I used CNNs with 2 convolutional layers &  kernal size of 3 and padding of 1 in each layer &  and max pooling with a kernal size of 2 after each Conv2d. Finally &  there is a fully connected layer at the end.\n",
+    "For traininig on an acutal task, I chose to train on the MNIST dataset. The model architecture was similar for both models. I used CNNs with 2 convolutional layers, kernal size of 3 and padding of 1 in each layer, and max pooling with a kernal size of 2 after each Conv2d. Finally, there is a fully connected layer at the end.\n",
     "\n",
-    "* Model 1: CNN &  first convolutional layer with 16 output channels &  second convolutional layer with 32 output channels\n",
-    "* Model 2: CNN &  first convolutional layer with 8 output channels &  second convolutional layer with 16 output channels"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The plot of the loss...\n",
+    "* Model 1: CNN, first convolutional layer with 16 output channels, second convolutional layer with 32 output channels\n",
+    "* Model 2: CNN, first convolutional layer with 8 output channels, second convolutional layer with 16 output channels\n",
     "\n",
-    "The plot of the accuracy..."
+    "The plots of the loss and accuracy are below:\n",
+    "\n",
+    "![fn2loss](./1.1%20Deep%20vs%20Shallow/1.1%20Train%20Actual%20Task/act_task_loss.png)\n",
+    "\n",
+    "![fn2acc](./1.1%20Deep%20vs%20Shallow/1.1%20Train%20Actual%20Task/act_task_accuracy.png)"
    ]
   },
   {
@@ -120,9 +129,9 @@
    "source": [
     "### Visualize Optimization Process\n",
     "\n",
-    "To visualize the optimization process &  I trained a DNN with hidden layers of sizes 17 &  26 &  25 &  23 &  and 12 on the MNIST dataset. During the training process &  I collected the weights of the model parameters at each epoch. These weights were stored in a dataframe where the granularity was 1 row per epoch per training. The model trained 8 times for 30 epochs each.\n",
+    "To visualize the optimization process, I trained a DNN with hidden layers of sizes 17, 26, 25, 23, and 12 on the MNIST dataset. During the training process, I collected the weights of the model parameters at each epoch. These weights were stored in a dataframe where the granularity was 1 row per epoch per training. The model trained 8 times for 30 epochs each.\n",
     "\n",
-    "The plots below are the PCA for the whole model &  followed by the PCA for the first layer. Weights were sampled for every 3 epochs."
+    "The plots below are the PCA for the whole model, followed by the PCA for the first layer. Weights were sampled for every 3 epochs."
    ]
   },
   {
@@ -143,10 +152,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below are the plots for the loss function and the gradient norm during training. I trained the same model as above (with different input and output sizes) on the function & \n",
+    "Below are the plots for the loss function and the gradient norm during training. I trained the same model as above (with different input and output sizes) on the function,\n",
     "\n",
     "$$\n",
-    "f(x) = \\frac{sin(5\\pi x)}{5\\pi x}\n",
+    "f(x) = \\frac{\\sin(5\\pi x)}{5\\pi x}\n",
     "$$"
    ]
   },
@@ -154,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You'll notice that the loss converges rather quickly (less than 100 epochs) &  but the gradient norm takes much longer to converge. Although &  you can see the variability decrease as training progresses."
+    "You'll notice that the loss converges rather quickly (less than 100 epochs), but the gradient norm takes much longer to converge. Although, you can see the variability decrease as training progresses."
    ]
   },
   {
@@ -179,9 +188,9 @@
    "source": [
     "### Fitting Random Labels\n",
     "\n",
-    "To fit a model on random labels &  I used a CNN with the exact same specifications as Model 1 in 1-1 pt 2 above. This model was trained for 150 epochs on the MNIST dataset. Hyperparameters were set to a batch_size of 64 and learning_rate of 0.001. The optimizer used was Adam.\n",
+    "To fit a model on random labels, I used a CNN with the exact same specifications as Model 1 in 1-1 pt 2 above. This model was trained for 150 epochs on the MNIST dataset. Hyperparameters were set to a batch_size of 64 and learning_rate of 0.001. The optimizer used was Adam.\n",
     "\n",
-    "To make the MNIST labels random &  I used random.shuffle() in the training and testing dataloaders. The loss and accuracy are plotted below."
+    "To make the MNIST labels random, I used random.shuffle() in the training and testing dataloaders. The loss and accuracy are plotted below."
    ]
   },
   {
@@ -190,7 +199,7 @@
    "source": [
     "### Number of Parameters vs Generalization\n",
     "\n",
-    "For this part &  I trained once again on the MNIST dataset. The model structures I chose were DNNs with 2 hidden layers that varied in sizes. The hidden layer sizes were:\n",
+    "For this part, I trained once again on the MNIST dataset. The model structures I chose were DNNs with 2 hidden layers that varied in sizes. The hidden layer sizes were:\n",
     "\n",
     "* model1 had hidden sizes of 8 & 16 \n",
     "* model2 had hidden sizes of 16 & 32 \n",
