--- a/1.2 Optimization/Gradient_Zero.ipynb
+++ b/1.2 Optimization/Gradient_Zero.ipynb
@@ -279,6 +279,44 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define your neural network model here\n",
+    "# ... (replace with your model definition)\n",
+    "\n",
+    "# Loss function (assuming it's already defined)\n",
+    "loss_fn = nn.MSELoss()  # Example, replace with your loss function\n",
+    "\n",
+    "# Function to calculate the Hessian matrix\n",
+    "def compute_hessian(inputs, outputs):\n",
+    "    with torch.autograd.no_grad():\n",
+    "        loss = loss_fn(outputs, inputs)  # Note the order of inputs/outputs in loss_fn\n",
+    "    hessian = torch.autograd.functional.hessian(loss, model.parameters())\n",
+    "    return hessian\n",
+    "\n",
+    "# Example input and output tensors\n",
+    "input_tensor = torch.randn(1, 784)  # Replace with your input shape\n",
+    "output_tensor = model(input_tensor)  # Assuming model output\n",
+    "\n",
+    "# Calculate and analyze the Hessian\n",
+    "hessian = compute_hessian(input_tensor, output_tensor)\n",
+    "eigenvalues, _ = torch.linalg.eig(hessian)\n",
+    "\n",
+    "# Calculate minimal ratio\n",
+    "minimal_ratio = torch.min(eigenvalues) / torch.max(eigenvalues)\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"Minimal ratio:\", minimal_ratio.item())\n",
+    "\n",
+    "# Further analysis (optional)\n",
+    "# - Visualize the eigenvalues distribution (histogram, etc.)\n",
+    "# - Track minimal ratio over training epochs\n"
+   ]
   }
  ],
  "metadata": {
