--- a/Homework 1 report.ipynb
+++ b/Homework 1 report.ipynb
@@ -131,7 +131,11 @@
     "\n",
     "To visualize the optimization process, I trained a DNN with hidden layers of sizes 17, 26, 25, 23, and 12 on the MNIST dataset. During the training process, I collected the weights of the model parameters at each epoch. These weights were stored in a dataframe where the granularity was 1 row per epoch per training. The model trained 8 times for 30 epochs each.\n",
     "\n",
-    "The plots below are the PCA for the whole model, followed by the PCA for the first layer. Weights were sampled for every 3 epochs."
+    "The plots below are the PCA for the whole model, followed by the PCA for the first layer. Weights were sampled for every 3 epochs.\n",
+    "\n",
+    "![pca_model](./1.2%20Optimization/PCA_model.png)\n",
+    "\n",
+    "![pca_layer1](./1.2%20Optimization/PCA_layer1.png)"
    ]
   },
   {
@@ -156,7 +160,13 @@
     "\n",
     "$$\n",
     "f(x) = \\frac{\\sin(5\\pi x)}{5\\pi x}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "![grad_fn](./1.2%20Optimization/grad_fn_2_sim.png)\n",
+    "\n",
+    "![grad_loss](./1.2%20Optimization/grad_norm_loss_fn.png)\n",
+    "\n",
+    "![grad_norm](./1.2%20Optimization/grad_norm_fn.png)"
    ]
   },
   {
@@ -190,7 +200,9 @@
     "\n",
     "To fit a model on random labels, I used a CNN with the exact same specifications as Model 1 in 1-1 pt 2 above. This model was trained for 150 epochs on the MNIST dataset. Hyperparameters were set to a batch_size of 64 and learning_rate of 0.001. The optimizer used was Adam.\n",
     "\n",
-    "To make the MNIST labels random, I used random.shuffle() in the training and testing dataloaders. The loss and accuracy are plotted below."
+    "To make the MNIST labels random, I used random.shuffle() in the training and testing dataloaders. The loss and accuracy are plotted below.\n",
+    "\n",
+    "![rand_label](./1.3%20Generalization/rand_lbl.png)"
    ]
   },
   {
@@ -213,7 +225,11 @@
     "* model10 had hidden sizes of 32 & 128 \n",
     "* model11 had hidden sizes of 8 & 256\n",
     "\n",
-    "The plots of the accuracy and loss for both training and testing are below."
+    "The plots of the accuracy and loss for both training and testing are below.\n",
+    "\n",
+    "![param_loss](./1.3%20Generalization/param_loss.png)\n",
+    "\n",
+    "![param_acc](./1.3%20Generalization/param_acc.png)"
    ]
   },
   {
@@ -239,7 +255,8 @@
     "For part 1, I used two different batch_sizes. m1 had a batch_size of 64 and m2 had a batch_size of 1024. Both models were trained on the MNIST dataset. Both models were DNNs with two hidden layers of sizes 32 and 64.\n",
     "\n",
     "Below is the plot of training and testing for both loss and accuracy including the interpolation parameter.\n",
-    "\n"
+    "\n",
+    "![plot](./1.3%20Generalization/flat_v_gen_p1.png)"
    ]
   },
   {
@@ -258,14 +275,17 @@
     "For part 2, I also trained on the MNIST dataset. All 5 models were DNNs with two hidden layers of sizes 32 and 64. The training approach we used was to adjust the batch_size for ech model. The batch_sizes used were 64, 256, 612, 1024, and 2048.\n",
     "\n",
     "Below are the plots of training and testing for both loss and accuracy including sensitivity.\n",
-    "\n"
+    "\n",
+    "![sens_loss](./1.3%20Generalization/sens_loss.png)\n",
+    "\n",
+    "![sens_acc](./1.3%20Generalization/sens_acc.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the model performance–in terms of loss, accuracy, and sensitivity–decreases as the batch_size increases. This is what we would expect as we know that a smaller batch_size is usually better, but comes at the cost of computational time."
+    "Notice that the model performance––in terms of loss, accuracy, and sensitivity––decreases as the batch_size increases. This is what we would expect as we know that a smaller batch_size is usually better, but comes at the cost of computational time."
    ]
   }
  ],
