--- a/Homework 1 report.ipynb
+++ b/Homework 1 report.ipynb
@@ -182,7 +182,13 @@
    "source": [
     "### What Happens When Gradient is Close to Zero\n",
     "\n",
-    "To be determined."
+    "In order to calculate the minimal ratio, I used the Hessian matrix approach which involved calculating the eigenvalues. The minimal ratio definition for this problem is the proportion of eigenvalues greater than 0. The way I got the weight which was equal to 0 is by setting a threshold of 0.001. When the gradient norm was less than 0.001, training was stopped and that was considered to be 0 for practical purposes.\n",
+    "\n",
+    "Below is a plot of the minimal ratio to the loss:\n",
+    "\n",
+    "![min_ratio](./1.2%20Optimization/min_ratio.png)\n",
+    "\n",
+    "Notice that the minimal ratio greater than roughly 0.25 leads to a smaller loss."
    ]
   },
   {
@@ -263,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that $\\alpha$ gives a minimum loss and maximum accuracy at ..."
+    "Notice that $\\alpha$ gives minimum loss and maximum accuracy close to 0 and 1. At these points, the parameters are either entirely from model 1 or entirely from model 2. This is interesting as it suggests training a single model may yeild better results than a combination of two models with only changes in training approach."
    ]
   },
   {
