github link in html

--- a/Homework 1 report.ipynb
+++ b/Homework 1 report.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Homework 1 Report CPSC 8430\n",
     "\n",
-    "Andrew Wright"
+    "Andrew Wright\n",
+    "\n",
+    "GitHub Link: https://github.com/andrewright17/Homework-1-Deep-Learning"
    ]
   },
   {
